--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ locale                   : "ko-KR"
 title                    : "기록하는 개발자" # Meta 태그에 들어가는 영역 , masthead_title등이 없으면 기본값으로 나온다.
 title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome to Jekyll | Minimal Mistakes</title> 해당 형식으로 들어갑니다.
 subtitle                 : "Version 1.0" # 타이틀 아래에 나올 작은 글씨 
-name                     : "김석진" # 맨 하단 이름 찍히는 영역
+name                     : "서가희" # 맨 하단 이름 찍히는 영역
 description              : "JAVA와 Spring Boot 혹은 Sever등 다양한 개발을 공부하는 블로그" # Meta 태그에 들어가는 영역 
 url                      : "https://seokahi.github.io" # GitBlog 호스트 주소
 baseurl                  : # subPath https://7271kim.github.io/blog라고 하고 싶을 시 "/blog" 라고 적는다.
-repository               : "7271kim/7271kim.github.com" # GitHub username/repo-name  
+repository               : "seokahi/seokahi.github.com" # GitHub username/repo-name  
 teaser                   : # "/assets/images/senior-couple-4723737_640.jpg" # 홈페이지 기본 티져 이미지
 logo                     : # 타이틀 옆에 작게 들어갈 이미지.
 masthead_title           : "기록하는 개발자 Blog" # 홈페이지 최 상탄에 들어갈 타이틀
@@ -23,7 +23,7 @@ words_per_minute         : 200 # 해당 포스트 읽는데 걸리는 시간을 
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : 7271kim # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : seokahi # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -101,24 +101,24 @@ analytics:
 
 # Site Author
 author:
-  name             : "김석진"
+  name             : "서가희"
   avatar           : "/assets/images/profile/programmer.png" # 프로필 이미지
   bio              : "꾸준히 공부하는 개발자입니다. <br> 블로그 포스트 글에서 잘못된 부분이나 수정했으면 하는 부분, 적극적으로 댓글 남겨주신다면 감사하겠습니다."
   location         : "Republic of Korea"
-  email            : "7271kim@naver.com"
+  email            : "seokahi@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       #url: mailto:7271kim@naver.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "http://honbabzone.com/"
+      url: "http://seokahi.github.io/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      url: "https://www.facebook.com/seokjin.kim.16"
+      url: "https://www.facebook.com/skh9797"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/7271kim"
@@ -131,7 +131,7 @@ footer:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:7271kim@naver.com
+      url: mailto:seokahi@naver.com
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
