--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "서가희"
-  avatar           : "/assets/images/profile/programmer.png" # 프로필 이미지
+  avatar           : "https://pixabay.com/photos/laptop-notebook-cellphone-computer-1839876/"
   bio              : "꾸준히 공부하는 개발자입니다. <br> 블로그 포스트 글에서 잘못된 부분이나 수정했으면 하는 부분, 적극적으로 댓글 남겨주신다면 감사하겠습니다."
   location         : "Republic of Korea"
   email            : "seokahi@naver.com"
